the first working with only tasks

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.jpa.hibernate.use_sql_comments=false
 spring.jpa.hibernate.type=all
 spring.jpa.hibernate.disableConnectionTracking=true
 spring.jpa.hibernate.default_schema=dental
+
+spring.mvc.hiddenmethod.filter.enabled=true
